Add radioactive farming and radiation cure system
Introduces the Phase 7 Radioactive Farming & Cure System, including new mutated crops, radioactive farmland mechanics, radiation antidotes, and radiation serums. Also fixes several compilation errors in NuclearCraftCommand.java.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 5a4e8139-6163-4778-b423-3f10a77edc9e
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: efa2e4c2-2b92-422e-b4dc-82719469b0e6
Replit-Helium-Checkpoint-Created: true